--- a/portfolio-site-master.html
+++ b/portfolio-site-master.html
@@ -1,10 +1,35 @@
+<html>
+    <head>
+        <title>Mias Portfolio</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body>
+<nav>
+  <!-- start of an unordered list -->
+  <ul>
+    <!-- first link -->
+    <li>
+      <a href="#work" class="link">Artwork</a>
+    </li>
+     <!-- second link -->
+     <li>
+      <a href="#about" class="link">About Me</a>
+    </li>
+     <!-- third link -->
+     <li>
+      <a href="#contact" class="link">Contact Me</a>
+    </li>
+  </ul>
+</nav>
 <section class="image-gallery content regular-wrapper">
           <div class="box-wrapper box1 hovereffect">
-            <div class="box-styling">
+            <div class="line1">
             <a href="images/wallpaper/project_1.html">
-              <img src="images/portrait-square.jpg">
+              <img src="assets/Jellfish.svg">
               <div class="overlay">
-            <h2>Identity, Space Between Podcast</h2>
+            <h2>Mia Stanton</h2>
             <p>description text</p> 
           </div>
           </a>
@@ -66,4 +91,5 @@
           </div>
         </div> 
         </section>
-        
+    </body>
+</html>
