--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+  
 <nav>
   <!-- start of an unordered list -->
   <ul>
@@ -23,7 +24,8 @@
     </li>
   </ul>
 </nav>
-<section class="image-gallery content regular-wrapper">
+
+<section class="everything">
           <div class="box-wrapper box1 hovereffect">
             <div class="line1">
             <a href="images/wallpaper/project_1.html">
