--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     </li>
   </ul>
 </nav>
+<div class="icon">
+   <img src="assets/v2.svg">
+</div>
+
 <div class="text1">
     <h1>Mia Stanton</h1>
      <h2>Gaphic Designer</h2>
