--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
     </li>
   </ul>
 </nav>
-<div class="icon">
-   <img src="assets/v2.svg">
+
+<div id="container">
+
+<div class="page-title">
+  <img class="icon" src="assets/v2.svg">
+    <div class="nine">
+      <h1>Mia Stanton<span>Graphic Designer</span></h1>
+    </div>
 </div>
-
-<div class="text1">
-    <h1>Mia Stanton</h1>
-     <h2>Gaphic Designer</h2>
- </div>
-
-<section class="everything">
+ <div class="row">
+    <div class="column">
           <div class="box-wrapper box1 hovereffect">
             <div class="line1">
             <a href="#artwork">
@@ -49,7 +50,9 @@
             </div>
         </div>  
       </div>   
+    </div>
 
+    <div class="column">
          <div class="box-wrapper box2 hovereffect">
             <div class="line2">
               <a href="">
@@ -62,7 +65,9 @@
                </div>
              </div>  
          </div>      
+        </div>
 
+        <div class="column">
          <div class="box-wrapper box3 hovereffect">
             <div class="line3">
               <a href="">
@@ -75,7 +80,10 @@
                </div>
             </div> 
           </div>
-
+        </div>
+      </div>
+        </div>
+    <!----
           <div class="box-wrapper box3 hovereffect">
             <div class="line4">
               <a href="">
@@ -89,6 +97,6 @@
           </div>
           </div>
         </div> 
-        </section>
+      -->
     </body>
 </html>
