--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </ul>
 </nav>
 
+
 <div id="container">
 
 <div class="page-title">
@@ -36,67 +37,42 @@
       <h1>Mia Stanton<span>Graphic Designer</span></h1>
     </div>
 </div>
+    <img class="hero" src="assets/Sea.png">
  <div class="row">
     <div class="column">
-          <div class="box-wrapper box1 hovereffect">
+         <div class="box-wrapper box1 hovereffect">
             <div class="line1">
-            <a href="#artwork">
-              <img src="assets/Jellfish.svg">
-              <div class="overlay"> 
-            </a>
-          </div>
-            <div class="aw2">
-              <h3>Artwork</h3>
+              <a href="#artwork"> <img src="assets/Jellfish.svg"></a>
             </div>
-        </div>  
-      </div>   
+            <div class="eight">
+                <h3>Artwork</h3>
+            </div>
+         </div>  
     </div>
 
     <div class="column">
          <div class="box-wrapper box2 hovereffect">
             <div class="line2">
-              <a href="">
-                <img src="assets/Jello fish.svg">
-                <div class="overlay">
-              </a>
+              <a href="#"> <img src="assets/Jello fish.svg"></a>
             </div>
-               <div class="aw2">
+            <div class="eight">
                  <h3>About me</h3>
-               </div>
-             </div>  
-         </div>      
-        </div>
+            </div>
+         </div>  
+    </div> 
 
-        <div class="column">
+    <div class="column">
          <div class="box-wrapper box3 hovereffect">
             <div class="line3">
-              <a href="">
-                <img src="assets/Jelly Fosh.svg">
-                <div class="overlay">
-              </a>
+              <a href="#"> <img src="assets/Jelly Fosh.svg"></a>
             </div>
-               <div class="aw2">
-                 <h3>Contat Me</h3>
-               </div>
-            </div> 
-          </div>
-        </div>
-      </div>
-        </div>
-    <!----
-          <div class="box-wrapper box3 hovereffect">
-            <div class="line4">
-              <a href="">
-                <img src="assets/Pink fosh.svg">
-                <div class="overlay">
-              </a>
+            <div class="eight">
+                 <h3>Contact Me</h3>
             </div>
-               <h3>Proj 1</h3>
-               <p>description</p>
-            </div> 
-          </div>
-          </div>
-        </div> 
-      -->
-    </body>
+         </div> 
+     </div>
+  </div>
+  </div>
+  <h2 id="#artwork">Artwork</h2>
+</body>
 </html>
