--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
 
-    <body>
+<body>
   
 <nav>
   <!-- start of an unordered list -->
@@ -38,6 +38,7 @@
     </div>
 </div>
     <img class="hero" src="assets/Sea.png">
+<!---- save this section of coe for colmns for the artwork
  <div class="row">
     <div class="column">
          <div class="box-wrapper box1 hovereffect">
@@ -72,7 +73,19 @@
          </div> 
      </div>
   </div>
+</div>
+-->
+
+<div class="box-wrapper box1 hovereffect">
+  <div class="line1">
+    <a href="#artwork"> <img src="assets/Jellfish.svg"></a>
   </div>
-  <h2 id="#artwork">Artwork</h2>
+  <div class="eight">
+      <h3>Artwork</h3>
+  </div>
+</div>  
+</div>
+
+  <h2 id="artwork">Artwork</h2>
 </body>
 </html>
