--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </li>
      <!-- second link -->
      <li>
-      <a href="#about-me" class="link">About Me</a>
+      <a href="#about_me" class="link">About Me</a>
     </li>
      <!-- third link -->
      <li>
-      <a href="#contact-me" class="link">Contact Me</a>
+      <a href="#contact_me" class="link">Contact Me</a>
     </li>
   </ul>
 </nav>
@@ -37,55 +37,68 @@
       <h1>Mia Stanton<span>Graphic Designer</span></h1>
     </div>
 </div>
-    <img class="hero" src="assets/Sea.png">
-<!---- save this section of coe for colmns for the artwork
- <div class="row">
+
+<img class="hero" src="assets/Sea.png">
+
+<!-- where nav links to -->
+
+ <div class="box-wrapper box1 hovereffect">
+  <div id="artwork" class="center">
+    <img src="assets/Jellfish.svg">
+  </div>
+  <div class="eight">
+      <h3>Artwork</h3>
+  </div>
+  <div class="descript">
+    <p> artwork!!! This is where the artwork will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
+  </div>
+  <!-- these are the rows for my artwork -->
+  <div class="row">
     <div class="column">
          <div class="box-wrapper box1 hovereffect">
-            <div class="line1">
-              <a href="#artwork"> <img src="assets/Jellfish.svg"></a>
-            </div>
-            <div class="eight">
-                <h3>Artwork</h3>
-            </div>
+              <img class="art_img" src="assets/Barracuda.png">
          </div>  
     </div>
 
     <div class="column">
          <div class="box-wrapper box2 hovereffect">
-            <div class="line2">
-              <a href="#"> <img src="assets/Jello fish.svg"></a>
-            </div>
-            <div class="eight">
-                 <h3>About me</h3>
-            </div>
+              <img class="art_img" src="assets/Blacktip.png">
          </div>  
     </div> 
 
     <div class="column">
          <div class="box-wrapper box3 hovereffect">
-            <div class="line3">
-              <a href="#"> <img src="assets/Jelly Fosh.svg"></a>
-            </div>
-            <div class="eight">
-                 <h3>Contact Me</h3>
-            </div>
+              <img class="art_img" src="assets/Barracuda.png">
          </div> 
-     </div>
+    </div>
   </div>
-</div>
--->
-
-<div class="box-wrapper box1 hovereffect">
-  <div class="line1">
-    <a href="#artwork"> <img src="assets/Jellfish.svg"></a>
+  <!-- end of artwork columns -->
+ </div>  
+ 
+ <div class="box-wrapper box1 hovereffect">
+  <div id="about_me" class="center">
+    <img src="assets/Jello fish.svg">
   </div>
   <div class="eight">
-      <h3>Artwork</h3>
+      <h3>About Me</h3>
   </div>
-</div>  
+  <div class="descript">
+    <p> About me!!! This is where the artwork will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
+  </div>
+ </div>  
+
+ <div class="box-wrapper box1 hovereffect">
+  <div id="contact_me" class="center">
+    <img src="assets/Pink fosh.svg">
+  </div>
+  <div class="eight">
+      <h3>Contact Me</h3>
+  </div>
+  <div class="descript">
+    <p> Contact me!!! This is where the artwork will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
+  </div>
+ </div>  
 </div>
 
-  <h2 id="artwork">Artwork</h2>
 </body>
 </html>
