--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div id="container">
 
-<div class="page-title">
+<div id="home" class="page-title">
   <img class="icon" src="assets/v2.svg">
     <div class="nine">
       <h1>Mia Stanton<span>Graphic Designer</span></h1>
@@ -41,7 +41,7 @@
 <img class="hero" src="assets/Sea.png">
 
 <!-- where nav links to -->
-
+<!-- Artwork Header Section -->
  <div class="box-wrapper box1 hovereffect">
   <div id="artwork" class="center">
     <img src="assets/Jellfish.svg">
@@ -52,6 +52,7 @@
   <div class="descript">
     <p> artwork!!! This is where the artwork will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
   </div>
+ </div> 
   <!-- these are the rows for my artwork -->
   <div class="row">
     <div class="column">
@@ -71,7 +72,6 @@
               <img class="art_img" src="assets/Barracuda.png">
          </div> 
     </div>
-  </div>
   <!-- end of artwork columns -->
  </div>  
  
@@ -99,6 +99,22 @@
   </div>
  </div>  
 </div>
-
+<script>// When the user scrolls the page, execute myFunction
+  window.onscroll = function() {myFunction()};
+  
+  // Get the navbar
+  var navbar = document.getElementById("navbar");
+  
+  // Get the offset position of the navbar
+  var sticky = navbar.offsetTop;
+  
+  // Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+  function myFunction() {
+    if (window.pageYOffset >= sticky) {
+      navbar.classList.add("sticky")
+    } else {
+      navbar.classList.remove("sticky");
+    }
+  }</script>
 </body>
 </html>
