--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h3>About Me</h3>
   </div>
   <div class="descript">
-    <p> About me!!! This is where the artwork will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
+    <p> About me!!! This is where the about me will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
   </div>
  </div>  
 
@@ -95,7 +95,7 @@
       <h3>Contact Me</h3>
   </div>
   <div class="descript">
-    <p> Contact me!!! This is where the artwork will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
+    <p> Contact me!!! This is where the contact will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
   </div>
  </div>  
 </div>
