--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<img class="hero" src="assets/Sea.png">
+<img class="hero" src="assets/Sea.jpg">
 
 <!-- where nav links to -->
 <!-- Artwork Header Section -->
