--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Mias Portfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="styles.css">
+      
     </head>
 
 <body>
@@ -31,12 +33,12 @@
 
 <div id="container">
 
-<div id="home" class="page-title">
+ <div id="home" class="page-title">
   <img class="icon" src="assets/v2.svg">
     <div class="nine">
       <h1>Mia Stanton<span>Graphic Designer</span></h1>
     </div>
-</div>
+ </div>
 
 <img class="hero" src="assets/Sea.jpg">
 
@@ -57,19 +59,19 @@
   <div class="row">
     <div class="column">
          <div class="box-wrapper box1 hovereffect">
-              <img class="art_img" src="assets/Barracuda.png">
+              <img class="art_img" src="assets/Fallen-Devil.jpg">
          </div>  
     </div>
 
     <div class="column">
          <div class="box-wrapper box2 hovereffect">
-              <img class="art_img" src="assets/Blacktip.png">
+              <img class="art_img" src="assets/ACF.jpg">
          </div>  
     </div> 
 
     <div class="column">
          <div class="box-wrapper box3 hovereffect">
-              <img class="art_img" src="assets/Barracuda.png">
+              <img class="art_img" src="assets/ACB.jpg">
          </div> 
     </div>
   <!-- end of artwork columns -->
