--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Mias Portfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="styles.css">
@@ -8,28 +9,15 @@
     </head>
 
 <body>
-  
-<nav>
-  <!-- start of an unordered list -->
-  <ul>
-    <!-- first link -->
-    <li>
-      <a href="#home" class="link">Home</a>
-    </li>
-    <li>
-      <a href="#artwork" class="link">Artwork</a>
-    </li>
-     <!-- second link -->
-     <li>
-      <a href="#about_me" class="link">About Me</a>
-    </li>
-     <!-- third link -->
-     <li>
-      <a href="#contact_me" class="link">Contact Me</a>
-    </li>
-  </ul>
-</nav>
 
+ <!--Navigation bar-->
+<div id="nav-placeholder"></div>
+<script>
+  $.get("nav.html", function(data){
+      $("#nav-placeholder").replaceWith(data);
+  });
+</script>
+<!--end of Navigation bar-->
 
 <div id="container">
 
@@ -59,19 +47,28 @@
   <div class="row">
     <div class="column">
          <div class="box-wrapper box1 hovereffect">
-              <img class="art_img" src="assets/Fallen-Devil.jpg">
+          <a href="artwork.html"><img class="art_img" src="assets/Fallen-Devil.jpg"></a>
+         </div>  
+         <div class="box-wrapper box1 hovereffect">
+          <a href="artwork.html"><img class="art_img" src="assets/Fallen-Devil.jpg"></a>
          </div>  
     </div>
 
     <div class="column">
          <div class="box-wrapper box2 hovereffect">
-              <img class="art_img" src="assets/ACF.jpg">
+          <a href="artwork.html"><img class="art_img" src="assets/ACF.jpg"></a>
          </div>  
+         <div class="box-wrapper box2 hovereffect">
+          <a href="artwork.html"><img class="art_img" src="assets/ACF.jpg"></a>
+         </div> 
     </div> 
 
     <div class="column">
          <div class="box-wrapper box3 hovereffect">
-              <img class="art_img" src="assets/ACB.jpg">
+          <a href="artwork.html"><img class="art_img" src="assets/ACB.jpg"></a>
+         </div> 
+         <div class="box-wrapper box3 hovereffect">
+          <a href="artwork.html"><img class="art_img" src="assets/ACB.jpg"></a>
          </div> 
     </div>
   <!-- end of artwork columns -->
@@ -102,6 +99,7 @@
   </div>
  </div>  
 </div>
+
 <script>// When the user scrolls the page, execute myFunction
   window.onscroll = function() {myFunction()};
   
