--- a/index.html
+++ b/index.html
@@ -47,28 +47,19 @@
   <div class="row">
     <div class="column">
          <div class="box-wrapper box1 hovereffect">
-          <a href="artwork.html"><img class="art_img" src="assets/Fallen-Devil.jpg"></a>
-         </div>  
-         <div class="box-wrapper box1 hovereffect">
-          <a href="artwork.html"><img class="art_img" src="assets/Fallen-Devil.jpg"></a>
+          <a href="artwork.html"><img class="art_img" src="assets/F-D.jpg"></a>
          </div>  
     </div>
 
     <div class="column">
          <div class="box-wrapper box2 hovereffect">
-          <a href="artwork.html"><img class="art_img" src="assets/ACF.jpg"></a>
-         </div>  
-         <div class="box-wrapper box2 hovereffect">
-          <a href="artwork.html"><img class="art_img" src="assets/ACF.jpg"></a>
+          <a href="artwork.html"><img class="art_img" src="assets/DTD.jpg"></a>
          </div> 
     </div> 
 
     <div class="column">
          <div class="box-wrapper box3 hovereffect">
-          <a href="artwork.html"><img class="art_img" src="assets/ACB.jpg"></a>
-         </div> 
-         <div class="box-wrapper box3 hovereffect">
-          <a href="artwork.html"><img class="art_img" src="assets/ACB.jpg"></a>
+          <a href="artwork.html"><img class="art_img" src="assets/ACF.jpg"></a>
          </div> 
     </div>
   <!-- end of artwork columns -->
