--- a/artwork.html
+++ b/artwork.html
@@ -28,7 +28,7 @@
               <img class="art_img" src="assets/Fallen-Devil.jpg">
          </div>  
          <div class="box-wrapper box1 hovereffect">
-          <a href="artwork.html"><img class="art_img" src="assets/Fallen-Devil.jpg"></a>
+          <img class="art_img" src="assets/Techno!.jpg">
          </div>  
     </div>
 
@@ -37,7 +37,7 @@
               <img class="art_img" src="assets/ACF.jpg">
          </div>  
          <div class="box-wrapper box2 hovereffect">
-          <img class="art_img" src="assets/ACF.jpg">
+          <img class="art_img" src="assets/DDP1.svg">
          </div> 
     </div> 
 
@@ -46,7 +46,7 @@
               <img class="art_img" src="assets/ACB.jpg">
          </div> 
          <div class="box-wrapper box3 hovereffect">
-          <img class="art_img" src="assets/ACB.jpg">
+          <img class="art_img" src="assets/DDP2.svg">
          </div> 
     </div>
  </div>
