--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
  
  <div class="box-wrapper box1 hovereffect">
   <div id="about_me" class="center">
-    <img src="assets/Jello fish.svg">
+    <img src="assets/Jello_fish.svg">
   </div>
   <div class="eight">
       <h3>About Me</h3>
   </div>
   <div class="about">
     <img src="assets/Blacktip.png" class="face textwrap">
-    <p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham. </p>
+    <p> Hello, I am Mia Seagrave Stanton, an artist and graphic designer. This site has been built based off of my middle name, Seagrave, it has always been something im proud of, a strong, dramatic mname with a history of being the name of a firedepartment. While my name gave me inspiration, so did many other things, such as games, people and mythical stories, as is shown in my artwork. I am exited to share my self-built site and artwork with you today, and i hope you enjoy! </p>
   </div>
  </div>  
 
  <div class="box-wrapper box1 hovereffect">
   <div id="contact_me" class="center">
-    <img src="assets/Pink fosh.svg">
+    <img src="assets/Pink_fosh.svg">
   </div>
   <div class="eight">
       <h3>Contact Me</h3>
