--- a/artwork.html
+++ b/artwork.html
@@ -30,6 +30,9 @@
          <div class="box-wrapper box1 hovereffect">
           <img class="art_img" src="assets/Techno!.jpg">
          </div>  
+         <div class="box-wrapper box1 hovereffect">
+            <img class="art_img" src="assets/Down-the-Drain.jpg">
+           </div>  
     </div>
 
     <div class="column">
