--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h3>Artwork</h3>
   </div>
   <div class="descript">
-    <p> artwork!!! This is where the artwork will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
+    <p> Welcome to my artwork! Click to see more! </p>
   </div>
  </div> 
   <!-- these are the rows for my artwork -->
@@ -74,7 +74,7 @@
   </div>
   <div class="about">
     <img src="assets/Blacktip.png" class="face textwrap">
-    <p> Hello, I am Mia Seagrave Stanton, an artist and graphic designer. This site has been built based off of my middle name, Seagrave, it has always been something im proud of, a strong, dramatic mname with a history of being the name of a firedepartment. While my name gave me inspiration, so did many other things, such as games, people and mythical stories, as is shown in my artwork. I am exited to share my self-built site and artwork with you today, and i hope you enjoy! </p>
+    <p> Hello, I am Mia Seagrave Stanton, an artist and graphic designer. This site has been built based off of my middle name, Seagrave, it has always been something im proud of, a strong, dramatic mname with a history of being the name of a firedepartment. While my name gave me inspiration, so did many other things, such as games, people and mythical stories, as is shown in my artwork. I am exited to share my self-built site and the displayed artwork with you today, feel free to look through and explore, I hope you enjoy! </p>
   </div>
  </div>  
 
@@ -86,7 +86,7 @@
       <h3>Contact Me</h3>
   </div>
   <div class="descript">
-    <p> Contact me!!! This is where the contact will go yayayayayayayayayayayayay this is where it will beeeeeeeeeeeeeeee!!!! wowoooowwwww!!! </p>
+    <p> Please contact me at... </p>
   </div>
  </div>  
 </div>
