--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </div>
   <div class="about">
     <img src="assets/Blacktip.png" class="face textwrap">
-    <p class="about_paragraph"> Hello, I am Mia Seagrave Stanton, an artist and graphic designer. This site has been built based off of my middle name, Seagrave, it has always been something im proud of, a strong, dramatic mname with a history of being the name of a firedepartment. While my name gave me inspiration, so did many other things, such as games, people and mythical stories, as is shown in my artwork. I am exited to share my self-built site and the displayed artwork with you today, feel free to look through and explore, I hope you enjoy! </p>
+    <p class="about_paragraph"> Hello, I am Mia Seagrave Stanton, an artist and graphic designer. This site has been built based off of my middle name, Seagrave, it has always been something im proud of, a strong, dramatic name with a history of being the name of a firedepartment. While my name gave me inspiration, so did many other things, such as games, people and mythical stories, as is shown in my artwork. I am exited to share my self-built site and the displayed artwork with you today, feel free to look through and explore, I hope you enjoy! </p>
   </div>
  </div>  
 
