--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h3>About Me</h3>
   </div>
   <div class="about">
-    <img src="assets/Blacktip.png" class="face textwrap">
+    <img src="assets/Me.jpg" class="face textwrap">
     <p class="about_paragraph"> Hello, I am Mia Seagrave Stanton, an artist and graphic designer. This site has been built based off of my middle name, Seagrave, it has always been something im proud of, a strong, dramatic name with a history of being the name of a firedepartment. While my name gave me inspiration, so did many other things, such as games, people and mythical stories, as is shown in my artwork. I am exited to share my self-built site and the displayed artwork with you today, feel free to look through and explore, I hope you enjoy! </p>
   </div>
  </div>  
@@ -87,6 +87,8 @@
   </div>
   <div class="descript">
     <p> Please contact me at... </p>
+      <a href="https://www.instagram.com/sweetvenom227/" target="_blank"><img src="assets/insta.svg" class="rat"></a>
+      <a href="https://twitter.com/SeaGrave277" target="_blank"><img src="assets/Twitter.svg" class="rat"></a>
   </div>
  </div>  
 </div>
