--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
       <h3>Contact Me</h3>
   </div>
   <div class="descript">
-    <p> Please contact me at... </p>
+    <p>Reach me at... </p>
       <a href="https://www.instagram.com/sweetvenom227/" target="_blank"><img src="assets/insta.svg" class="rat"></a>
       <a href="https://twitter.com/SeaGrave277" target="_blank"><img src="assets/Twitter.svg" class="rat"></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0o5Eu0fZDQFzj3ZeaQf-r0adgbVKpn_y52nwlLxugnQE_kA/viewform?usp=sf_link" target="_blank"><p>Please take this survey!</p></a>
   </div>
  </div>  
 </div>
