--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Mias Portfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="styles.css">
+        <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
       
     </head>
 
@@ -34,7 +37,7 @@
 <!-- Artwork Header Section -->
  <div class="box-wrapper box1 hovereffect">
   <div id="artwork" class="center">
-    <img src="assets/Jellfish.svg">
+    <img src="assets/Jellfish.svg" class="animate__wobble">
   </div>
   <div class="eight">
       <h3>Artwork</h3>
