--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="container">
 
  <div id="home" class="page-title">
-  <img class="icon" src="assets/v2.svg">
+  <img class="icon animate__wobble animate__animated" src="assets/v2.svg">
     <div class="nine">
       <h1>Mia Stanton<span>Graphic Designer</span></h1>
     </div>
@@ -36,8 +36,8 @@
 <!-- where nav links to -->
 <!-- Artwork Header Section -->
  <div class="box-wrapper box1 hovereffect">
-  <div id="artwork" class="center">
-    <img src="assets/Jellfish.svg" class="animate__wobble">
+  <div id="artwork" class="center animate__wobble animate__animated">
+    <img src="assets/Jellfish.svg">
   </div>
   <div class="eight">
       <h3>Artwork</h3>
@@ -69,7 +69,7 @@
  </div>  
  
  <div class="box-wrapper box1 hovereffect">
-  <div id="about_me" class="center">
+  <div id="about_me" class="center animate__wobble animate__animated">
     <img src="assets/Jello_fish.svg">
   </div>
   <div class="eight">
@@ -82,7 +82,7 @@
  </div>  
 
  <div class="box-wrapper box1 hovereffect">
-  <div id="contact_me" class="center">
+  <div id="contact_me" class="center animate__wobble animate__animated">
     <img src="assets/Pink_fosh.svg">
   </div>
   <div class="eight">
