--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="container">
 
  <div id="home" class="page-title">
-  <img class="icon animate__wobble animate__animated" src="assets/v2.svg">
+  <img class="icon animate__jello animate__animated" src="assets/v2.svg">
     <div class="nine">
       <h1>Mia Stanton<span>Graphic Designer</span></h1>
     </div>
