--- a/artwork.html
+++ b/artwork.html
@@ -23,7 +23,7 @@
     <div class="top_spacer"></div>
 
  <div class="row">
-    <div class="column">
+    <div class="column1">
          <div class="box-wrapper box1 hovereffect">
               <img class="art_img" src="assets/Fallen-Devil.jpg">
          </div>  
@@ -35,16 +35,19 @@
            </div>  
     </div>
 
-    <div class="column">
+    <div class="column1">
          <div class="box-wrapper box2 hovereffect">
               <img class="art_img" src="assets/ACF.jpg">
          </div>  
          <div class="box-wrapper box2 hovereffect">
           <img class="art_img" src="assets/DDP1.svg">
          </div> 
+         <div class="box-wrapper box2 hovereffect">
+          <img class="art_img" src="assets/Final.jpg">
+         </div> 
     </div> 
 
-    <div class="column">
+    <div class="column1">
          <div class="box-wrapper box3 hovereffect">
               <img class="art_img" src="assets/ACB.jpg">
          </div> 
@@ -53,7 +56,5 @@
          </div> 
     </div>
  </div>
-
-
 </body>
 </html>
